--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -13,8 +13,8 @@
                         <li class="orders__item">
                             <h1>Order - # <%= order._id %></h1>
                             <ul class="orders__products">
-                                <% order.products.forEach(p => { %>
-                                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
+                                <% order.items.forEach(p => { %>
+                                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)  (Price -<%= p.product.price %>)</li>
                                 <% }); %>
                             </ul>
                         </li>
